--- a/front/package.json
+++ b/front/package.json
@@ -8,6 +8,10 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@formkit/icons": "^1.2.2",
+    "@formkit/themes": "^1.2.2",
+    "@formkit/vue": "^1.2.2",
+    "@vueform/vueform": "^1.5.4",
     "axios": "^1.6.0",
     "core-js": "^3.8.3",
     "vue": "^3.2.13"
