Added multi-step input plugin

--- a/front/package.json
+++ b/front/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@formkit/addons": "^1.2.2",
     "@formkit/icons": "^1.2.2",
     "@formkit/themes": "^1.2.2",
     "@formkit/vue": "^1.2.2",
