--- a/front/package.json
+++ b/front/package.json
@@ -20,6 +20,7 @@
     "vue-router": "^4.2.5"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.10",
     "autoprefixer": "^10.4.16",
     "daisyui": "^4.0.7",
     "eslint": "^7.32.0",
